Changelog
=========

1.0.4 (unreleased)
------------------

- adjusted the default tinymce configuration

- fix bug in TinyMCERichText adapter's to_public, to allow empty strings
  to be rendered

1.0.3 (2011-09-09)
------------------

- add missing custom rich text edit widget, work around import bug

- fix preview button, so it points to the correct ++preview++ path 
  (++preview++ is not on IFolder, just IPublication, so add after the
  first path component -- assumes the first is a publication)

- make cursor a pointer when hovering over ES options on the 'add to page'
  interface

1.0.2 (2011-08-17)
------------------

- enable sticky service tab button for all containers (from just publication)

1.0.1 (2011-08-10)
------------------

- fixed bug when acquiring the nearest IStickyContentService local utility

- created a default content template for Ghosts, so that their rendering
  is isolated from the rest.

1.0 (2011-07-07)
----------------

- Initial release